--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ vercel env add DB_HOST 41.93.67.4
 vercel env add DB_USER magesa
 vercel env add DB_PASSWORD ibt@!123
 vercel env add JWT_SECRET NewGeneratedJWTSecret65d3sd3w3567hf43
+vercel env add PORT 10875
